# XR-Fit

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.ac  configure.in  description
cgi-bin/: GARealGenome.cpp  GARealGenome.h  Makefile  Makefile.am  Makefile.in  Task.cpp  Task.h  config.h.in  defines.h  dispatcher.cpp  driver.cpp  driver_cgi.cpp  elements.cpp  elements.h  file_copy.cpp  file_copy.h  gixos.cpp  gixos_multilayer.cpp  gixos_nph.cpp  gixos_nph.h  gixos_nph_mysql.h  gixosmultilayer.cpp  gixosmultilayer.h  gixosnph.cpp  gixosnph.h  gixosnph_mysql.cpp  gixosnph_mysql.h  http.h  logUtility.cpp  logUtility.h  multilayer.cpp  multilayer.h  nph-t3.cpp  nph-t4.cpp  nph.cpp  nph.h  nph2.cpp  nph_mysql.cpp  nph_mysql.h  plot_gixos.cpp  (+8 more)
htdocs/: About.html  Chamber-params.html  Makefile  Makefile.in  alignment0.html  config.php  gixos-last.php  gixos.html  last.php  post-gixos.php  post.php  post2.php  stop.php  view.php  wait.php  xr-fitting.html  xray.html  xray2.html
